# hunyo-mcp-server

./: .coverage  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  PRE_COMMIT_SETUP.md  README.md  ROADMAP.md  VALIDATION_REPORT.md  coverage.xml  pyproject.toml  requirements.txt  run-hunyo-mcp.sh  test_notebook.py  tox.ini
.cursor/rules/: current-project-info.mdc  dry-convention.mdc  duckdb-docs.mdc  import-convention.mdc  logging-convention.mdc  marimo-runtime-info.mdc  no-unicode-convention.mdc  package-separation-plan-convention.mdc  roadmap-convention.mdc  testing-convention.mdc
.github/workflows/: test.yml
sandbox/: __init__.py  test_notebook.py
schemas/: README.md
schemas/json/: SCHEMA_ANALYSIS.md  dataframe_lineage_schema.json  openlineage_events_schema.json  runtime_events_schema.json
schemas/sql/: dataframe_lineage_events_table.sql  init_database.sql  mcp_cheatsheet.md  openlineage_events_table.sql  runtime_events_table.sql
schemas/sql/views/: lineage_summary.sql  performance_metrics.sql
src/capture/: __init__.py  lightweight_runtime_tracker.py  live_lineage_interceptor.py  logger.py  native_hooks_interceptor.py  unified_marimo_interceptor.py  websocket_interceptor.py
src/hunyo_mcp_server/: config.py  mcp_instance.py  orchestrator.py  server.py
src/hunyo_mcp_server/ingestion/: __init__.py  duckdb_manager.py  event_processor.py  file_watcher.py
src/hunyo_mcp_server/tools/: __init__.py  lineage_tool.py  query_tool.py  schema_tool.py
src/hunyo_mcp_server/utils/: __init__.py  paths.py
test/: __init__.py  conftest.py  mocks.py  test_capture_integration.py  test_fixed_runtime.py  test_marimo_notebook_fixtures.py  test_openlineage_generation.py  test_python_version_compatibility.py  test_roadmap_validation.py  test_schema_validation.py
test/e2e/: test_end_to_end_mcp_server.py
test/fixtures/: __init__.py  openlineage_demo_notebook.py  real_marimo_cell_execution_notebook.py  runtime_tracking_demo_notebook.py  test_notebook.py
test/integration/: test_capture_integration.py  test_end_to_end_mcp_server.py  test_ingestion_pipeline_integration.py  test_marimo_notebook_integration.py  test_real_marimo_cell_execution.py  test_real_marimo_execution.py  test_schema_validation_integration.py  test_unified_system_integration.py
test/meta/: __init__.py  test_python_version_compatibility.py  test_roadmap_validation.py
test/test_capture/: test_init_utilities.py  test_lightweight_runtime_tracker.py  test_lineage_logging_robustness.py  test_live_lineage_interceptor.py  test_logger.py  test_native_hooks_interceptor.py  test_unified_marimo_interceptor.py  test_websocket_interceptor.py
test/test_hunyo_mcp_server/: __init__.py  test_server.py
test/test_hunyo_mcp_server/test_ingestion/: test_event_processor.py
test/test_ingestion/: __init__.py  test_event_processor.py
tests/: conftest.py
tests/fixtures/: __init__.py  real_marimo_cell_execution_notebook.py  test_notebook.py
tests/integration/: test_concurrent_database_stress.py  test_end_to_end_mcp_server.py  test_ingestion_pipeline_integration.py  test_orchestrator_race_condition.py  test_real_marimo_cell_execution.py  test_schema_validation_integration.py  test_unified_system_integration.py
tests/meta/: test_dev_prod_mode_consistency.py  test_python_version_compatibility.py  test_roadmap_validation.py
